# yorokobot

./: .env.example  Cargo.toml  LICENSE  README.md  compose.yaml  flake.nix  log4rs_config.yaml
.github/workflows/: code-quality.yml
src/: client.rs  database.rs  environment.rs  errors.rs  lib.rs  main.rs
src/database/: client.rs  models.rs
