[package]
name = "yorokobot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = { version="0.11", default-features = false, features = ["client", "gateway", "rustls_backend", "model" ] } 
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
mongodb = { version = "2.3.0", default-features = false, features = ["tokio-runtime"] }
serde = { version = "1.0", features = [ "derive" ] }
log4rs = { version = "1.2.0", features = [ "console_appender", "rolling_file_appender", "compound_policy", "fixed_window_roller", "size_trigger", "gzip", "background_rotation" ] }
log = "0.4.17"
futures = "0.3.25"
